Fix video by just making it an iframe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <link rel="stylesheet" href="assets/css/restaurant.css">
    </head>
    <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
-      <div id="fb-root"></div>
       <div class="probootstrap-loader"></div>
       <!-- END loader -->
       <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
@@ -304,11 +303,11 @@
                   <div class="card border-0">
                      <!--<img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Own the night shoot">-->
 					 <div class="card-img-top">
-					 <div class="fb-video" data-href="https://www.facebook.com/Inforce01/videos/481648762324179/" data-allowfullscreen="true" data-width="500"></div>
+					    <iframe src="http://www.facebook.com/video/embed?video_id=481648762324179" frameborder="0" width="100%" height="100%"></iframe>
 					 </div>
                      <div class="card-body pb_p-40">
                         <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">May 11th, 2019</small>
-                        <h4 class="card-title"><a href="#" class="text-danger">Own The Night Shoot</a></h4>
+                        <h4 class="card-title"><a href="https://www.facebook.com/Inforce01/videos/481648762324179/" target="_blank" class="text-danger">Own The Night Shoot</a></h4>
                         <p class="card-text">For the 2nd year, Johnny’s has been invited to be the only food vendor at the INFORCE - Own The Night Shoot taking place at Wallum Lake Rod and Gun Club located in Harrisville, Rhode Island The event will be held on May 11th rain or shine…event hours are from 11:00 AM to 10:00 PM …</p>
                      </div>
                   </div>
@@ -324,7 +323,7 @@
                      <img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
                      <div class="card-body pb_p-40">
                         <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">TBD</small>
-                        <h4 class="card-title"><a href="#" class="text-danger">Coming soon.</a></h4>
+                        <h4 class="card-title"><a href="#" class="text-danger">Coming soon...</a></h4>
                         <p class="card-text"></p>
                      </div>
                   </div>
@@ -439,13 +438,5 @@
       <script src="assets/js/main.js"></script>
       <script src="menu/js/menuPopulator.js"></script>
       <script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=801&amp;locationId=386572&amp;lang=en_US&amp;lang=en_US&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
-	  <script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.5";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	  </script>
    </body>
 </html>
