fix iframes and fix quotes... ugly but it works

--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
                         <div class="quote pb_text-black">&ldquo;</div>
                         <blockquote class="mb-5 pb_font-20">I picked my granddaughter up nearby and we needed breakfast. I figured the place would be decent because the parking lot was full. We found a table and enjoyed the ambiance while waiting to get service. The staff was very friendly. Our food was excellent, as well. Nice local place.</blockquote>
                         <h3 class="heading">Bohica12 - TripAdvisor</h3>
+						<br />
+						<br />
                      </div>
                   </div>
                </div>
@@ -275,6 +277,8 @@
                         <div class="quote pb_text-black">&ldquo;</div>
                         <blockquote class="mb-5 pb_font-20">Been there twice now and both times the service was prompt and friendly, coffee good, food yummy and filling; portions generous and nice “specials” ... can’t wait to try the BBQ! This cute little diner delivers exactly what one would expect!</blockquote>
                         <h3 class="heading">Robin Marnoch Mcdonald - Facebook</h3>
+						<br />
+						<br />
                      </div>
                   </div>
                </div>
@@ -284,6 +288,8 @@
                         <div class="quote pb_text-black">&ldquo;</div>
                         <blockquote class="mb-5 pb_font-20">Cute little neighborhood diner. Nicely decorated with a hometown feel. Friendly service with typical diner food. We went for lunch, but unfortunately they do not serve lunch on Sundays so only breakfast items were available. Our waitress suggested the breakfast burger, which was very good, and was served with home fries. Looking forward to going back for lunch, or to try the BBQ on Saturday nights during the warmer weather.</blockquote>
                         <h3 class="heading">Heidi B. - Yelp</h3>
+						<br />
+						<br />
                      </div>
                   </div>
                </div>
@@ -303,7 +309,9 @@
                   <div class="card border-0">
                      <!--<img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Own the night shoot">-->
 					 <div class="card-img-top">
-					    <iframe src="http://www.facebook.com/video/embed?video_id=481648762324179" frameborder="0" width="100%" height="100%"></iframe>
+					    <div class="embed-responsive embed-responsive-4by3">
+					       <iframe class="embed-responsive-item" src="http://www.facebook.com/video/embed?video_id=481648762324179" allowFullScreen></iframe>
+						</div>
 					 </div>
                      <div class="card-body pb_p-40">
                         <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">May 11th, 2019</small>
@@ -358,8 +366,10 @@
                            <div class="col-md">
                               <div class="text-uppercase">Facebook</div>
                               <br />
-                              <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner&tabs&width=340&height=181&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="181" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-                           </div>
+					          <div class="embed-responsive embed-responsive-16by9">
+                                 <iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner&tabs&width=340&height=181&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"></iframe>
+                              </div>
+						   </div>
                            <br />
                         </div>
                         <br />
