Fix facebook iframe

--- a/index.html
+++ b/index.html
@@ -366,9 +366,7 @@
                            <div class="col-md">
                               <div class="text-uppercase">Facebook</div>
                               <br />
-					          <div class="embed-responsive embed-responsive-16by9">
-                                 <iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner&tabs&width=340&height=181&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"></iframe>
-                              </div>
+                              <iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner&tabs&width=340&height=181&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="181" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 						   </div>
                            <br />
                         </div>
