--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                      <!--<img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Own the night shoot">-->
 					 <div class="card-img-top">
 					    <!--<div class="embed-responsive embed-responsive-4by3">-->
-					       <iframe width="100%" height="100%" src="http://www.facebook.com/video/embed?video_id=481648762324179" allowFullScreen></iframe>
+					       <iframe frameborder="0" width="100%" height="100%" src="http://www.facebook.com/video/embed?video_id=481648762324179" allowFullScreen></iframe>
 						<!--</div>-->
 					 </div>
                      <div class="card-body pb_p-40">
