change facebook iframe

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
                            <div class="col-md">
                               <div class="text-uppercase">Facebook</div>
                               <br />
-                              <!--<iframe class="embed-responsive-item" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner&tabs&width=340&height=181&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="181" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>-->
-                              <iframe class="facebookIFrame" width="100%" height="100%" frameborder="0" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysvictorydiner"></iframe>
+							  <p><a href="https://www.facebook.com/johnnysvictorydiner">Click Here</a> to visit our Facebook page to see latest events, like, and share us!</p>
+                              <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=154&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId" width="154" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                            </div>
                            <br />
                         </div>
