Make the catering events load from property files

--- a/index.html
+++ b/index.html
@@ -306,33 +306,11 @@
             </div>
             <div class="row">
                <div class="card-deck">
-                  <div class="card border-0">
-                     <div class="card-img-top">
-                        <div class="embed-responsive embed-responsive-16by9">
-                           <iframe class="embed-responsive-item" src="https://www.facebook.com/video/embed?video_id=481648762324179" allowFullScreen></iframe>
-                        </div>
-                     </div>
-                     <div class="card-body pb_p-40">
-                        <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">May 11th, 2019</small>
-                        <h4 class="card-title"><a href="https://www.facebook.com/Inforce01/videos/481648762324179/" target="_blank" class="text-danger">Own The Night Shoot</a></h4>
-                        <p class="card-text">For the 2nd year, Johnny’s has been invited to be the only food vendor at the INFORCE - Own The Night Shoot taking place at Wallum Lake Rod and Gun Club located in Harrisville, Rhode Island The event will be held on May 11th rain or shine…event hours are from 11:00 AM to 10:00 PM …</p>
-                     </div>
+                  <div class="card border-0" id="event1">
                   </div>
-                  <div class="card border-0">
-                     <img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
-                     <div class="card-body pb_p-40">
-                        <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">TBD</small>
-                        <h4 class="card-title"><a href="#" class="text-danger">Coming soon...</a></h4>
-                        <p class="card-text"></p>
-                     </div>
+                  <div class="card border-0" id="event2">
                   </div>
-                  <div class="card border-0">
-                     <img class="card-img-top" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
-                     <div class="card-body pb_p-40">
-                        <small class="text-uppercase pb_color-dark-opacity-3 font-weight-bold">TBD</small>
-                        <h4 class="card-title"><a href="#" class="text-danger">Coming soon...</a></h4>
-                        <p class="card-text"></p>
-                     </div>
+                  <div class="card border-0" id="event3">
                   </div>
                </div>
             </div>
