comment out the script for now

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       <script src="assets/js/magnific-popup-options.js"></script>
       <script src="assets/js/main.js"></script>
       <script src="menu/js/menuPopulator.js"></script>
-      <script src="catering/js/cateringPopulator.js"></script>
+      <!--<script src="catering/js/cateringPopulator.js"></script>-->
       <script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=801&amp;locationId=386572&amp;lang=en_US&amp;lang=en_US&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
    </body>
 </html>
