Add the new menu items to the nav

--- a/index.html
+++ b/index.html
@@ -120,10 +120,16 @@
                         <a class="nav-link p-3" data-toggle="list" href="#lunch" role="tab">Lunch</a>
                      </li>
                      <li class="nav-item">
+                        <a class="nav-link p-3" data-toggle="list" href="#entrees" role="tab">Entrees</a>
+                     </li>
+                     <li class="nav-item">
                         <a class="nav-link p-3" data-toggle="list" href="#bbq" role="tab">BBQ</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link p-3" data-toggle="list" href="#beverages" role="tab">Beverages</a>
+                     </li>
+					 <li class="nav-item">
+                        <a class="nav-link p-3" data-toggle="list" href="#desserts" role="tab">Desserts</a>
                      </li>
                   </ul>
                   <!-- Tab panes -->
