--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       <link rel="stylesheet" href="assets/css/helpers.css">
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="stylesheet" href="assets/css/restaurant.css">
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134449216-1"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'UA-134449216-1');
+      </script>
    </head>
    <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
       <div class="probootstrap-loader"></div>
