--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade show active" id="entrees" role="tabpanel">
+                            <div class="tab-pane fade" id="entrees" role="tabpanel">
                                 <div class="row">
                                     <div class="col-md">
                                         <ul class="list-unstyled pb_food-menu" id="entreesColumn1">
