fix contact info

--- a/index.html
+++ b/index.html
@@ -392,6 +392,13 @@
                                         </div>
                                     </div>
                                     <br />
+                                    <div class="col-md">
+                                        <div class="text-uppercase">Contact Info</div>
+                                        <br />
+                                        <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
+                                        <p>Phone: (401)-765-2661</p>
+                                    </div>
+                                    <br />
                                 </div>
                             </div>
                         </div>
@@ -423,8 +430,7 @@
                         <ul class="list-inline">
                             <li class="list-inline-item"><a href="https://www.facebook.com/montysvictorydiner/" class="p-2"><i class="fa fa-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.tripadvisor.com/Restaurant_Review-g54083-d386572-Reviews-Johnny_s_Victory_Diner-Harrisville_Burrillville_Rhode_Island.html" class="p-2"><i class="fa fa-tripadvisor"></i></a></li>
-                            <li class="list-inline-item"><p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p><p>Phone: (401)-765-2661</p></li>
-							<li class="list-inline-item"><a href="https://www.yelp.com/biz/johnny-s-victory-diner-burrillville" class="p-2"><i class="fa fa-yelp"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.yelp.com/biz/johnny-s-victory-diner-burrillville" class="p-2"><i class="fa fa-yelp"></i></a></li>
                         </ul>
                     </div>
                 </div>
