--- a/index.html
+++ b/index.html
@@ -384,19 +384,19 @@
                                 <br />
                                 <div class="row">
                                     <div class="col-md">
+                                        <div class="text-uppercase">Contact Info</div>
+                                        <br />
+                                        <p>Email: <a href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
+                                        <p>Phone: (401)-765-2661</p>
+                                    </div>
+                                    <br />
+                                    <div class="col-md">
                                         <div class="text-uppercase">Yelp</div>
                                         <br />
                                         <div id="yelp-biz-badge-rrc-4rR-Nq2f9EHFxEqm-QpQqQ">
                                             <a href="http://yelp.com/biz/johnny-s-victory-diner-burrillville?utm_medium=badge_star_rating_reviews&amp;utm_source=biz_review_badge" target="_blank"><img id="yelpLogo" src="https://dyn.yelpcdn.com/extimg/en_US/rrc/4rR-Nq2f9EHFxEqm-QpQqQ.png"></img>
                                             </a>
                                         </div>
-                                    </div>
-                                    <br />
-                                    <div class="col-md">
-                                        <div class="text-uppercase">Contact Info</div>
-                                        <br />
-                                        <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
-                                        <p>Phone: (401)-765-2661</p>
                                     </div>
                                     <br />
                                 </div>
