fix fb and add instagram badge

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                         <div class="text-uppercase">Facebook</div>
                                         <br />
                                         <p><a href="https://www.facebook.com/johnnysvictorydiner">Click Here</a> to visit our Facebook page to see latest events, like, and share us!</p>
-                                        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=154&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId" width="154" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                                        <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fjohnnysbbqri%2F&width=122&layout=button_count&action=like&size=large&show_faces=true&share=true&height=46&appId" width="154" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                                     </div>
                                     <br />
                                 </div>
@@ -429,6 +429,7 @@
                     <div class="col">
                         <ul class="list-inline">
                             <li class="list-inline-item"><a href="https://www.facebook.com/montysvictorydiner/" class="p-2"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.instagram.com/johnnysvictorydiner/" class="p-2"><i class="fa fa-instagram"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.tripadvisor.com/Restaurant_Review-g54083-d386572-Reviews-Johnny_s_Victory_Diner-Harrisville_Burrillville_Rhode_Island.html" class="p-2"><i class="fa fa-tripadvisor"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.yelp.com/biz/johnny-s-victory-diner-burrillville" class="p-2"><i class="fa fa-yelp"></i></a></li>
                         </ul>
