add instagram widget

--- a/index.html
+++ b/index.html
@@ -391,6 +391,12 @@
                                     </div>
                                     <br />
                                     <div class="col-md">
+                                        <div class="text-uppercase">Instagram</div>
+                                        <br />
+                                        <p><a href="https://www.instagram.com/johnnysvictorydiner/"><img src="assets/images/logos/instagramLogo.png"></img></a>Follow us on Instagram!</p>
+                                    </div>
+                                    <br />
+                                    <div class="col-md">
                                         <div class="text-uppercase">Yelp</div>
                                         <br />
                                         <div id="yelp-biz-badge-rrc-4rR-Nq2f9EHFxEqm-QpQqQ">
