--- a/index.html
+++ b/index.html
@@ -394,12 +394,13 @@
                                         <div class="text-uppercase">Instagram</div>
                                         <br />
                                         <p>
-										    <a role="button" class="btn btn-outline-danger" href="https://www.instagram.com/johnnysvictorydiner/">
-											    <img src="assets/images/logos/instagramLogo.png" width="25px"></img> 
-												<span id="instagramFollowerCount"></span> followers
-											</a>
-											<br /> 
-											Follow us on Instagram!</p>
+                                            <a role="button" class="btn btn-outline-danger" href="https://www.instagram.com/johnnysvictorydiner/">
+                                            <img src="assets/images/logos/instagramLogo.png" width="25px"></img> 
+                                            <span id="instagramFollowerCount"></span> followers
+                                            </a>
+                                            <br /> 
+                                            Follow us on Instagram!
+                                        </p>
                                     </div>
                                     <br />
                                     <div class="col-md">
@@ -477,7 +478,7 @@
         <script src="assets/js/main.js"></script>
         <script src="menu/js/menuPopulator.js"></script>
         <script src="catering/js/cateringPopulator.js"></script>
-		<script src="assets/js/instagramFollowers.js"></script>
+        <script src="assets/js/instagramFollowers.js"></script>
         <script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=801&amp;locationId=386572&amp;lang=en_US&amp;lang=en_US&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
     </body>
 </html>
