enable ssl on yelp so the entire site can enforce https

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                         <div class="text-uppercase">Yelp</div>
                                         <br />
                                         <div id="yelp-biz-badge-rrc-4rR-Nq2f9EHFxEqm-QpQqQ">
-                                            <a href="http://yelp.com/biz/johnny-s-victory-diner-burrillville?utm_medium=badge_star_rating_reviews&amp;utm_source=biz_review_badge" target="_blank"><img id="yelpLogo" src="https://dyn.yelpcdn.com/extimg/en_US/rrc/4rR-Nq2f9EHFxEqm-QpQqQ.png"></img>
+                                            <a href="https://yelp.com/biz/johnny-s-victory-diner-burrillville?utm_medium=badge_star_rating_reviews&amp;utm_source=biz_review_badge" target="_blank"><img id="yelpLogo" src="https://dyn.yelpcdn.com/extimg/en_US/rrc/4rR-Nq2f9EHFxEqm-QpQqQ.png"></img>
                                             </a>
                                         </div>
                                     </div>
