Add hours of operation

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                                 From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
                                 Come on in, get to know our friendly staff and become part of the family.
                             </p>
+                            <h3 class="header-title">Hours</h3>
+							<p>Mon - Thurs: 5am to 2pm</p>
+							<p>Fri - Sat: 5am to 8pm</p>
+							<p>Mon - Thurs: 6am to 1pm</p>
                             <h3 class="header-title">Contact Us</h3>
                             <p class="description">
                             <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
