--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <h3 class="header-title">Hours</h3>
 							<p>Mon - Thurs: 5am to 2pm</p>
 							<p>Fri - Sat: 5am to 8pm</p>
-							<p>Mon - Thurs: 6am to 1pm</p>
+							<p>Sun: 6am to 1pm</p>
                             <h3 class="header-title">Contact Us</h3>
                             <p class="description">
                             <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
