--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                             </p>
                             <h3 class="header-title">Hours</h3>
 							<p>Mon - Thurs: 5am to 2pm</p>
-							<p>Fri - Sat: 5am to 8pm</p>
+							<p>Fri: 5am to 8pm</p>
+							<p>Sat: 5am to 2pm</p>
 							<p>Sun: 6am to 1pm</p>
                             <h3 class="header-title">Contact Us</h3>
                             <p class="description">
