--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>		<!-- COVID-19 Banner -->
+		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
+            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 4-7pm for curbside takeout.<br/>Please call 401-765-2661 to place your order.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+		
         <!-- END nav -->
         <section class="pb_cover_v1 cover-bg-black cover-bg-opacity-4 text-center" style="background-image: url(assets/images/restaurant/1900x1200/img_1.jpg)" id="section-home">
             <div class="container">
@@ -70,11 +77,16 @@
                                 From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
                                 Come on in, get to know our friendly staff and become part of the family.
                             </p>
-                            <h3 class="header-title">Hours</h3>
+							
+							<!-- COVID-19 Hours -->
+							<h3 class="header-title">Hours (Updated for COVID-19)</h3>
+							<p>Fri - Sat: 4pm to 7pm</p>
+							
+                            <!--<h3 class="header-title">Hours</h3>
 							<p>Mon - Thurs: 5am to 2pm</p>
 							<p>Fri: 5am to 8pm</p>
 							<p>Sat: 5am to 2pm</p>
-							<p>Sun: 6am to 1pm</p>
+							<p>Sun: 6am to 1pm</p>-->
                             <h3 class="header-title">Contact Us</h3>
                             <p class="description">
                             <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
@@ -446,7 +458,7 @@
                 <div class="row text-center">
                     <div class="col">
                         <ul class="list-inline">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/montysvictorydiner/" class="p-2"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/johnnysvictorydiner/" class="p-2"><i class="fa fa-facebook"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.instagram.com/johnnysvictorydiner/" class="p-2"><i class="fa fa-instagram"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.tripadvisor.com/Restaurant_Review-g54083-d386572-Reviews-Johnny_s_Victory_Diner-Harrisville_Burrillville_Rhode_Island.html" class="p-2"><i class="fa fa-tripadvisor"></i></a></li>
                             <li class="list-inline-item"><a href="https://www.yelp.com/biz/johnny-s-victory-diner-burrillville" class="p-2"><i class="fa fa-yelp"></i></a></li>
