add new links to toast online ordering and gift cards

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                 <div class="collapse navbar-collapse justify-content-md-center" id="probootstrap-navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-home">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-about">About</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-menu">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="https://www.toasttab.com/johnnys-victory-diner/v3">Order Online</a></li>
+                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-contact">Contact</a></li>
                         <li class="nav-item logo-center d-xl-block d-lg-block d-md-none d-sm-none d-none">
                             <a class="nav-link text-uppercase pb_letter-spacing-2" href="index.html">
                             <img src="assets/images/restaurant/logo.png" alt="Instant Logo" class="light">
@@ -52,13 +53,14 @@
                         </li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-gallery">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-catering">Catering</a></li>
-                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="https://www.toasttab.com/johnnys-victory-diner/giftcards">Gift Cards</a></li>
+                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-about">About</a></li>
                     </ul>
                 </div>
             </div>
         </nav>		<!-- COVID-19 Banner -->
 		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
-            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 4-7pm for curbside takeout.<br/>Please call 401-765-2661 to place your order.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
+            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 4-7pm for curbside takeout.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
@@ -92,6 +94,8 @@
                             <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
                             <p>Phone: (401)-765-2661</p>
                             </p>
+                            <p><a href="https://www.toasttab.com/johnnys-victory-diner/v3" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">Order Online</a></p>
+                            <p><a href="https://www.toasttab.com/johnnys-victory-diner/giftcards" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">Gift Cards</a></p>
                             <p><a href="#section-menu" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">View our menu</a></p>
                             </p>
                         </div>
