--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </nav>		<!-- COVID-19 Banner -->
 		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
-            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 4-7pm for curbside takeout.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
+            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 4-7pm for curbside takeout.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
